# seth-devalve-portfolio

./: .gitignore  README.md
01-data-pipeline/: .env.example  .gitignore  README.md  requirements.txt
02-tv-ratings-ml/: LightGBM_tv_ratings.ipynb  LinearModel_raw_target_tv_ratings.ipynb  MLP_analysis.py  MLP_core.py  MLP_embeddings_tv_ratings.ipynb  MLP_tv_ratings.ipynb  README.md  lightgbm_utils.py  tv_ratings_preprocessing.py
03-bayesian-optimization/: README.md  U_2021.csv  bayesian_hierarchical_season_simulator.ipynb  lp_solver.py  matchup_labels_2021.txt  playoff_contention_historical.ipynb  playoff_contention_simulated.ipynb  utils.py
04-solver-platform/api/: pyproject.toml  requirements.txt
04-solver-platform/api/app/: database.py  main.py
04-solver-platform/api/app/models/: __init__.py  color_policy.py  fixed_game_set.py  matchup.py  ml_futures.py  ml_rematch.py  mock_solver_config.py  net_cats.py  prediction_set.py  ruleset.py  run.py  season.py  solution.py  team.py  weekmap.py
04-solver-platform/api/app/routers/: color_policy.py  fixed_game_sets.py  matchups.py  ml_futures.py  ml_rematch.py  mock_solver_config.py  net_cats.py  prediction_sets.py  rulesets.py  runs.py  seasons.py  solutions.py  teams.py  weekmaps.py
04-solver-platform/api/app/schemas/: color_policy.py  fixed_game_set.py  matchup.py  ml_futures.py  ml_rematch.py  mock_solver_config.py  net_cats.py  prediction_set.py  ruleset.py  run.py  season.py  solution.py  team.py  weekmap.py
04-solver-platform/api/app/worker/: celery_app.py  mock_solver.py  tasks.py
(+110 files in other folders)
